Add reset buttons and play again button as described by issues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div id="gameboard1" class="gameboard"></div>
     <div id="gameboard2" class="gameboard"></div>
   </div>
+  <div class="ship-counter-container">
+    <div id="ship-counter-player1" class="ship-counter">Ships: 0</div>
+    <div id="ship-counter-player2" class="ship-counter">Ships: 0</div>
+  </div>
   <button id="randomize-ships">Randomize Player 1's Ships</button>
+  <button id="reset-player2">Reset Player 2's Gameboard</button>
+  <button id="new-game">New Game</button>
+  <button id="play-again" style="display: none;">Play Again</button>
   <script src="app.js"></script>
 </body>
 </html>
